namespace Core.Enums;

public enum BlobType
{
    VEHICLE,
    PROFILE,
    LICENSE,
}