namespace Core.Enums;

public enum OAuthProvider
{
    GOOGLE,
    APPLE,
    FACEBOOK,
}